<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.onebarangay.fragments.ServicesFragment">

    <TextView
        android:id="@+id/servicesTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/services"
        android:layout_margin="32dp"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/servicesTxt">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/vAppointmentBtn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="@dimen/box_size_btn"
                android:layout_height="@dimen/box_size_btn"
                android:layout_margin="8dp"
                android:drawableTop="@drawable/view_appointment"
                android:text="@string/vAppointment"
                android:textColor="@android:color/black"
                app:cornerRadius="8dp" />

            <Button
                android:id="@+id/vReportsBtn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="@dimen/box_size_btn"
                android:layout_height="@dimen/box_size_btn"
                android:layout_margin="8dp"
                android:drawableTop="@drawable/view_reports"
                android:text="@string/vReports"
                android:textColor="@android:color/black"
                app:cornerRadius="8dp" />

        </LinearLayout>

        <Button
            android:id="@+id/sDocuBtn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="@dimen/box_size_btn"
            android:layout_height="@dimen/box_size_btn"
            android:layout_margin="8dp"
            android:drawableTop="@drawable/scan_document"
            android:text="@string/sDocu"
            android:textColor="@android:color/black"
            app:cornerRadius="8dp" />

    </LinearLayout>

</RelativeLayout>