<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBulkScheduleActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:text="@string/bSched"
                android:textColor="@color/black"
                android:layout_marginTop="22dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp">

                <TextView
                    android:id="@+id/eventTypeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eventType"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/eventTypeDrop"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/eventText"
                app:errorEnabled="true"
                app:helperTextTextColor="#FF0000"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearEventDrop">

                <AutoCompleteTextView
                    android:id="@+id/eventDrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="No. of Residents" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Time" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addressTextInput">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/noResidents"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:hint="@string/noResidents"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:helperTextTextColor="#FF0000"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/timeDrop"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:hint="@string/timeText"
                    app:errorEnabled="true"
                    app:helperTextTextColor="#FF0000"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <AutoCompleteTextView
                        android:id="@+id/timeDropdown"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="43dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Relationship Type" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Street" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addressTextInput">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/householdDrop"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:hint="@string/householdText"
                    app:errorEnabled="true"
                    app:helperTextTextColor="#FF0000"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <AutoCompleteTextView
                        android:id="@+id/householdDropdown"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/areaDrop"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:hint="@string/areaText"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:helperTextTextColor="#FF0000"
                    app:hintEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="175dp"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearEventTitle4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Date Interval" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Time Interval" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bulkSched_editDateInterval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="MM/DD/YYYY"
                    android:layout_weight="1"
                    android:ems="10" />

                <TextView
                    android:id="@+id/bulkSched_editTimeInterval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="HH:MM"
                    android:layout_weight="1"
                    android:ems="10" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="36dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="12dp"
                    android:text="Notification Type" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/notifPush"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="Push"
                    app:buttonTint="@color/alphaBlue" />

                <CheckBox
                    android:id="@+id/notifEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Email"
                    app:buttonTint="@color/alphaBlue" />

                <CheckBox
                    android:id="@+id/notifApp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/notifApp"
                    app:buttonTint="@color/alphaBlue" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bulkSched_cancelBtn"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:drawableLeft="@drawable/cancel_icon_blue"
                    android:padding="12dp"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/bulkSched_doneBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:backgroundTint="@color/alphaBlue"
                    android:padding="10dp"
                    android:drawableLeft="@drawable/check_icon"
                    android:text="@string/done" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>